Add footprint to DMA; refactor movement map building

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -292,6 +292,7 @@
     "        harmonyObject = HarmonyObject.from_tracked_object(\n",
     "            trackedObject, objectType, objectSubType, objectKwargs)\n",
     "        mc.XYLocation.set_relationship(harmonyObject.oid, self.cc.rsc.changeSetToRealCenter(harmonyObject))\n",
+    "        mc.Footprint.set_relationship(harmonyObject.oid, self.objectToHull(harmonyObject))\n",
     "        self.memory[memoryIndex] = harmonyObject\n",
     "        mc.qs.graph.memorize(harmonyObject)\n",
     "        return harmonyObject\n",
@@ -671,70 +672,92 @@
     "        shifted_hull[:, :, 0] = np.clip(shifted_hull[:, :, 0], 0, width - 1)   # Clip X values\n",
     "        shifted_hull[:, :, 1] = np.clip(shifted_hull[:, :, 1], 0, height - 1)  # Clip Y values\n",
     "        return shifted_hull\n",
+    "\n",
+    "    def elevationOverlays(self) -> dict[int, np.array]:\n",
+    "        elevationOverlays = {}\n",
+    "        for obj in self.memory:\n",
+    "            if obj.oid == harmonyObject.oid:\n",
+    "                continue\n",
+    "            if self.object_type(obj.oid) in [\"Terrain\", \"Structure\"]:\n",
+    "                elevation = mc.Elevation(obj.oid).terminant + 1\n",
+    "                if elevation in elevationOverlays:\n",
+    "                    elevationOverlays[elevation] = cv2.drawContours(elevationOverlays[elevation], self.cc.objectToHull(obj), -1, 255, -1)\n",
+    "                else:\n",
+    "                    elevationOverlays[elevation] = cv2.drawContours(zeros.copy(), self.cc.objectToHull(obj), -1, 255, -1)\n",
+    "            else:\n",
+    "                objectOverlay = cv2.drawContours(objectOverlay, self.cc.objectToHull(obj), -1, 255, -1)\n",
+    "        return elevationOverlays\n",
+    "\n",
+    "    def walkDirection(self, harmonyObject, direction: tuple[float, float], elevationOverlays: dict[int, np.array]):\n",
+    "        costByLocation = {}\n",
+    "        near_moves = []\n",
+    "        med_moves = []\n",
+    "        long_moves = []\n",
+    "        full_moves = []\n",
+    "        dx, dy = direction\n",
+    "        cumulativeCost = 0\n",
+    "        for i in range(1, 20, 2):\n",
+    "            i = i * 0.3\n",
+    "            if path_blocked[(dx, dy)]:\n",
+    "                continue\n",
+    "            x, y = dx * i, dy * i\n",
+    "            elevation = 1\n",
+    "            # Find Object overlaps at x, y position\n",
+    "            # Elevation = 1 or elevation(overlaps[0]) + 1\n",
+    "            shiftedHull= self.shift_hull_within_bounds(hull, np.array([x * INCHES_TO_MM, y * INCHES_TO_MM], dtype=np.int32), zeros.shape)\n",
+    "            shiftedIm = cv2.drawContours(zeros.copy(), [shiftedHull], -1, 255, -1)\n",
+    "            objectElevation = None\n",
+    "            for elevation in sorted(elevationOverlays.keys(), reverse=True):\n",
+    "                if cv2.bitwise_and(elevationOverlays[elevation], shiftedIm).any():\n",
+    "                    objectElevation = elevation\n",
+    "                    break\n",
+    "            objectElevation = objectElevation or 0\n",
+    "            \n",
+    "            if cv2.bitwise_and(objectOverlay, shiftedIm).any():\n",
+    "                print(f\"{dx}, {dy} is blocked\")\n",
+    "                path_blocked[(dx, dy)] = True\n",
+    "    \n",
+    "            movement_cost = mc.Move.movement_cost([dx * i * INCHES_TO_MM, dy * i * INCHES_TO_MM, objectElevation * INCHES_TO_MM])\n",
+    "\n",
+    "            if movement_cost >= movement_speed * 0.95:\n",
+    "                path_blocked[(dx, dy)] = True\n",
+    "            else:\n",
+    "                costByLocation[(x, y)] = movement_cost\n",
+    "                if movement_cost < movement_speed * 0.2:\n",
+    "                    near_moves.append((x, y))\n",
+    "                elif movement_cost < movement_speed * 0.5:\n",
+    "                    med_moves.append((x, y))\n",
+    "                elif movement_cost < movement_speed * 0.7:\n",
+    "                    long_moves.append((x, y))\n",
+    "                else:\n",
+    "                    full_moves.append((x, y))\n",
+    "        return costByLocation, near_moves, med_moves, long_moves, full_moves\n",
     "    \n",
     "    def buildMovementHeatMap(self, harmonyObject: HarmonyObject):\n",
     "        hull = self.cc.objectToHull(harmonyObject)\n",
+    "        costByLocation = {}\n",
+    "        near_moves = []\n",
+    "        med_moves = []\n",
+    "        long_moves = []\n",
+    "        full_moves = []\n",
     "\n",
     "        movementHeatMap = getattr(harmonyObject, \"movementHeatMap\", {}).get(str(mc.XYLocation(harmonyObject.oid).terminant), None)\n",
     "        if movementHeatMap is None:\n",
     "            movement_speed = mc.MovementSpeed(harmonyObject.oid).terminant\n",
     "            generate_ds = lambda: [[1, 0], [1, 0.5], [1, 1], [0.5, 1], [0, 1], [-0.5, 1], [-1, 1], [-1, 0.5], [-1, 0], [-1, -0.5], [-1, -1], [-0.5, -1], [0, -1], [0.5, -1], [1, -1]]\n",
     "            path_blocked = {tuple(path): False for path in generate_ds()}\n",
-    "            costByLocation = {}\n",
-    "            near_moves = []\n",
-    "            med_moves = []\n",
-    "            long_moves = []\n",
-    "            full_moves = []\n",
     "            zeros = np.zeros([1200, 1200, 1], dtype=\"uint8\")\n",
     "            objectOverlay = zeros.copy()\n",
-    "            elevationOverlays = {}\n",
-    "            for obj in self.memory:\n",
-    "                if obj.oid == harmonyObject.oid:\n",
-    "                    continue\n",
-    "                if self.object_type(obj.oid) in [\"Terrain\", \"Structure\"]:\n",
-    "                    elevation = mc.Elevation(obj.oid).terminant + 1\n",
-    "                    if elevation in elevationOverlays:\n",
-    "                        elevationOverlays[elevation] = cv2.drawContours(elevationOverlays[elevation], self.cc.objectToHull(obj), -1, 255, -1)\n",
-    "                    else:\n",
-    "                        elevationOverlays[elevation] = cv2.drawContours(zeros.copy(), self.cc.objectToHull(obj), -1, 255, -1)\n",
-    "                else:\n",
-    "                    objectOverlay = cv2.drawContours(objectOverlay, self.cc.objectToHull(obj), -1, 255, -1)\n",
-    "            for dx, dy in generate_ds():\n",
-    "                for i in range(1, 20, 2):\n",
-    "                    i = i * 0.3\n",
-    "                    if path_blocked[(dx, dy)]:\n",
-    "                        continue\n",
-    "                    x, y = dx * i, dy * i\n",
-    "                    elevation = 1\n",
-    "                    # Find Object overlaps at x, y position\n",
-    "                    # Elevation = 1 or elevation(overlaps[0]) + 1\n",
-    "                    shiftedHull= self.shift_hull_within_bounds(hull, np.array([x * INCHES_TO_MM, y * INCHES_TO_MM], dtype=np.int32), zeros.shape)\n",
-    "                    shiftedIm = cv2.drawContours(zeros.copy(), [shiftedHull], -1, 255, -1)\n",
-    "                    objectElevation = None\n",
-    "                    for elevation in sorted(elevationOverlays.keys(), reverse=True):\n",
-    "                        if cv2.bitwise_and(elevationOverlays[elevation], shiftedIm).any():\n",
-    "                            objectElevation = elevation\n",
-    "                            break\n",
-    "                    objectElevation = objectElevation or 0\n",
-    "                    \n",
-    "                    if cv2.bitwise_and(objectOverlay, shiftedIm).any():\n",
-    "                        print(f\"{dx}, {dy} is blocked\")\n",
-    "                        path_blocked[(dx, dy)] = True\n",
+    "            elevationOverlays = self.elevationOverlays()\n",
     "            \n",
-    "                    movement_cost = mc.Move.movement_cost([dx * i * INCHES_TO_MM, dy * i * INCHES_TO_MM, objectElevation * INCHES_TO_MM])\n",
-    "    \n",
-    "                    if movement_cost >= movement_speed * 0.95:\n",
-    "                        path_blocked[(dx, dy)] = True\n",
-    "                    else:\n",
-    "                        costByLocation[(x, y)] = movement_cost\n",
-    "                        if movement_cost < movement_speed * 0.2:\n",
-    "                            near_moves.append((x, y))\n",
-    "                        elif movement_cost < movement_speed * 0.5:\n",
-    "                            med_moves.append((x, y))\n",
-    "                        elif movement_cost < movement_speed * 0.7:\n",
-    "                            long_moves.append((x, y))\n",
-    "                        else:\n",
-    "                            full_moves.append((x, y))\n",
+    "            for dx, dy in generate_ds():\n",
+    "                pathCostByLocation, path_near_moves, path_med_moves, path_long_moves, path_full_moves = self.walkDirection(harmonyObject, [dx, dy], elevationOverlays)\n",
+    "\n",
+    "                near_moves.extend(path_near_moves)\n",
+    "                med_moves.extend(path_med_moves)\n",
+    "                long_moves.extend(path_long_moves)\n",
+    "                full_moves.extend(path_full_moves)\n",
+    "                costByLocation = {**costByLocation, **pathCostByLocation}\n",
     "    \n",
     "            layer_hulls = []\n",
     "            for moves, color in zip([near_moves, med_moves, long_moves, full_moves], [(0, 255, 0), (0, 255, 125), (0, 125, 255), (0, 0, 255)]):\n",
