--- a/harmony/dma/MechaCombat/MechSystem.ipynb
+++ b/harmony/dma/MechaCombat/MechSystem.ipynb
@@ -13,7 +13,7 @@
     "with Notebook():\n",
     "    from quantumsystem import qs, System, HyperSystem, IntegerSystem\n",
     "    from DamageSystem import Armor, UnitDamage\n",
-    "    from MovementSystem import Move, MovementSpeed\n",
+    "    from MovementSystem import Move, MovementSpeed, Footprint\n",
     "    from WeaponsSystem import Weapons\n",
     "    from FactionSystem import Faction"
    ]
@@ -96,11 +96,12 @@
     "        \n",
     "    @classmethod\n",
     "    def buildMechFactory(cls, systemDefaults):\n",
-    "        def newMechFactory(mechName, faction=\"Unaligned\", skill=4, xylocation=None):\n",
+    "        def newMechFactory(mechName, faction=\"Unaligned\", skill=4, xylocation=None, footprint=None):\n",
     "            systemDefaults[\"Unit\"][\"Faction\"] = faction\n",
     "            systemDefaults[\"Unit\"][\"Skill\"] = skill\n",
     "            systemDefaults[\"Unit\"][\"Move\"][\"XYLocation\"] = xylocation or [0, 0]\n",
     "            systemDefaults[\"Unit\"][\"Move\"][\"Elevation\"] = 1\n",
+    "            systemDefaults[\"Unit\"][\"Move\"][\"Footprint\"] = footprint or Footprint.example_footprint\n",
     "            return cls(mechName, **systemDefaults)\n",
     "        return newMechFactory\n",
     "\n",
@@ -123,7 +124,8 @@
     "            \"Move\": {  # Move System\n",
     "                \"Movement\": {\"MovementSpeed\": 8, \"JumpJets\": \"j\", \"DistanceMoved\": 0},\n",
     "                \"Elevation\": \"0\",\n",
-    "                \"XYLocation\": [0, 0]\n",
+    "                \"XYLocation\": [0, 0],\n",
+    "                \"Footprint\": Footprint.example_footprint\n",
     "            },\n",
     "            \"Faction\": \"Unaligned\",\n",
     "            \"Skill\": 4\n",
@@ -154,7 +156,8 @@
     "            \"Move\": {  # Move System\n",
     "                \"Movement\": {\"MovementSpeed\": 6, \"JumpJets\": \"null\", \"DistanceMoved\": 0},\n",
     "                \"Elevation\": \"0\",\n",
-    "                \"XYLocation\": [0, 0]\n",
+    "                \"XYLocation\": [0, 0],\n",
+    "                \"Footprint\": Footprint.example_footprint\n",
     "            },\n",
     "            \"Faction\": \"Unaligned\",\n",
     "            \"Skill\": 4\n",
@@ -185,7 +188,8 @@
     "            \"Move\": {  # Move System\n",
     "                \"Movement\": {\"MovementSpeed\": 8, \"JumpJets\": \"null\", \"DistanceMoved\": 0},\n",
     "                \"Elevation\": \"0\",\n",
-    "                \"XYLocation\": [0, 0]\n",
+    "                \"XYLocation\": [0, 0],\n",
+    "                \"Footprint\": Footprint.example_footprint\n",
     "            },\n",
     "            \"Faction\": \"Unaligned\",\n",
     "            \"Skill\": 4\n",
