Movement calculation updates

--- a/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
+++ b/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
@@ -24,6 +24,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f63de9b2-f7ac-432c-ae28-715fd40e876b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INCHES_TO_MM = 25.4"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "abff0cf7-c867-431c-b480-f4237e2056d6",
    "metadata": {},
@@ -73,10 +83,9 @@
     "    @classmethod\n",
     "    @Footprint.d\n",
     "    @Elevation.d\n",
-    "    def calculate_movement(cls, entity, delta: list[float, float], elevation, footprint, step_size=5) -> float:\n",
+    "    def calculate_movement(cls, entity, delta: list[float, float], elevation, footprint, step_size=5, max_cost=None) -> float:\n",
     "        zeros = np.zeros([1200, 1200, 1], dtype=\"uint8\")\n",
     "        distance = sum([d**2 for d in delta]) ** 0.5\n",
-    "        # print(f\"Attempting to move {entity} by {distance} -- {delta}\")\n",
     "        dx = delta[0] / distance\n",
     "        dy = delta[1] / distance\n",
     "        steps = int(distance / step_size + 0.5)\n",
@@ -85,8 +94,7 @@
     "        unitOverlay = Unit.buildOverlay(exclude=[entity])\n",
     "        lastElevation = elevation\n",
     "        pathMovementCost = 0\n",
-    "        i = 0\n",
-    "        step_cost = 0\n",
+    "        movements = []\n",
     "        for i in range(steps):\n",
     "            x, y = dx * i * step_size, dy * i * step_size\n",
     "            # Find Object overlaps at x, y position\n",
@@ -110,10 +118,13 @@
     "                pathMovementCost += 1000000000\n",
     "                break\n",
     "            else:\n",
-    "                step_cost = cls.movement_cost([dx * step_size, dy * step_size, (lastElevation - objectElevation)], difficulty=objectDifficulty)\n",
-    "                pathMovementCost += step_cost\n",
+    "                pathMovementCost += cls.movement_cost([dx * step_size, dy * step_size, (lastElevation - objectElevation) * INCHES_TO_MM], difficulty=objectDifficulty)\n",
     "                lastElevation = objectElevation\n",
-    "        return pathMovementCost, lastElevation\n",
+    "            if max_cost is not None and pathMovementCost > max_cost:\n",
+    "                # print(f\"Exceeded max cost ({max_cost}) with {pathMovementCost}\")\n",
+    "                break\n",
+    "            movements.append(((x, y), pathMovementCost, lastElevation))\n",
+    "        return pathMovementCost, lastElevation, movements\n",
     "        \n",
     "    @classmethod\n",
     "    @Elevation.d\n",
