Fixed movement phase

--- a/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
+++ b/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
@@ -54,10 +54,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "6333b382-8ade-4f57-8ff9-3701efc81c0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 48) (2007117521.py, line 48)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 48\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f\"{entity} elevation\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 48)\n"
+     ]
+    }
+   ],
    "source": [
     "class Movement(Movement):\n",
     "    @staticmethod\n",
@@ -118,7 +127,7 @@
     "                pathMovementCost += 1000000000\n",
     "                break\n",
     "            else:\n",
-    "                pathMovementCost += cls.movement_cost([dx * step_size, dy * step_size, (lastElevation - objectElevation) * INCHES_TO_MM], difficulty=objectDifficulty)\n",
+    "                pathMovementCost += cls.movement_cost([dx * step_size, dy * step_size, abs((objectElevation - lastElevation) * INCHES_TO_MM)], difficulty=objectDifficulty)\n",
     "                lastElevation = objectElevation\n",
     "            if max_cost is not None and pathMovementCost > max_cost:\n",
     "                # print(f\"Exceeded max cost ({max_cost}) with {pathMovementCost}\")\n",
@@ -138,7 +147,7 @@
     "    @XYLocation.d\n",
     "    @MovementSpeed.d\n",
     "    def move(cls, entity: str, delta: list[float, float], movementspeed, xylocation, elevation):\n",
-    "        movement_cost, elevation = cls.calculate_movement(entity=entity, delta=delta)\n",
+    "        movement_cost, elevation, _ = cls.calculate_movement(entity=entity, delta=delta)\n",
     "        if movement_cost > movementspeed:\n",
     "            raise MovementSpeed.MovementSpeedViolation(f\"Cannot move unit further ({movement_cost:4.2f}) than its movement speed ({movementspeed:4.2f}) by {delta} + {elevation}\")\n",
     "\n",
