Fix movement display; clear console messages on transitions

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -366,8 +366,8 @@
     "    def objectLastDistance(self, harmonyObject: HarmonyObject):\n",
     "        if mc.GameState.getPhase() == \"Move\":\n",
     "            currentPoint = self.captureRealCoord(harmonyObject)\n",
-    "            lastDistance = self.distanceFromRealPoint(harmonyObject, currentPoint)\n",
-    "            return lastDistance\n",
+    "            delta = [d1 - d0 for d0, d1 in zip(mc.XYLocation(harmonyObject.oid).terminant, currentPoint)]\n",
+    "            return mc.Movement.calculate_movement(entity=harmonyObject.oid, delta=delta)[0]\n",
     "        else:\n",
     "            return mc.DistanceMoved(harmonyObject.oid).terminant\n",
     "\n",
@@ -631,6 +631,13 @@
     "                return self.objectCanAct(obj) and not self.objectHasDeclared(obj)\n",
     "            case \"Action\":\n",
     "                return self.objectCanAct(obj) and not self.objectHasResolved(obj)\n",
+    "\n",
+    "    def objectViolatingRules(self, obj: TrackedObject):\n",
+    "        match self.getPhase():\n",
+    "            case \"Move\":\n",
+    "                return self.objectLastDistance(obj) > self.objectSpeed(obj.oid)\n",
+    "            case _:\n",
+    "                return False\n",
     "\n",
     "    def buildMiniMap(self, objectsAndColors=None, showInteractions=True):\n",
     "        miniMap = super().buildMiniMap(objectsAndColors=objectsAndColors)\n",
