Fix movement calculation

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -526,14 +526,14 @@
     "\n",
     "    def objectElevation(self, obj):\n",
     "        elevationOverlays = mc.buildElevationOverlays()\n",
-    "        objectElevation = 1\n",
+    "        objectElevation = 0\n",
     "        footprint = mc.Footprint(obj.oid).terminant\n",
     "        if footprint is None:\n",
     "            footprint = self.cc.objectToHull(obj)\n",
     "        im = cv2.drawContours(np.zeros([1200, 1200, 1], dtype=np.uint8), [footprint], -1, 255, -1)\n",
     "        for elevation in sorted(elevationOverlays.keys(), reverse=True):\n",
     "            if cv2.bitwise_and(elevationOverlays[elevation], im).any():\n",
-    "                objectElevation = elevation + 1\n",
+    "                objectElevation = elevation\n",
     "                break\n",
     "        return objectElevation\n",
     "        \n",
