--- a/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
+++ b/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
@@ -104,6 +104,8 @@
     "        lastElevation = elevation\n",
     "        pathMovementCost = 0\n",
     "        movements = []\n",
+    "        objectElevation = 0\n",
+    "        objectDifficulty = 1\n",
     "        for i in range(steps):\n",
     "            x, y = dx * i * step_size, dy * i * step_size\n",
     "            # Find Object overlaps at x, y position\n",
@@ -112,7 +114,7 @@
     "            objectElevation = None\n",
     "            for elevation in sorted(elevationOverlays.keys(), reverse=True):\n",
     "                if cv2.bitwise_and(elevationOverlays[elevation], shiftedIm).any():\n",
-    "                    objectElevation = elevation + 1\n",
+    "                    objectElevation = elevation\n",
     "                    break\n",
     "            objectElevation = objectElevation or 0\n",
     "\n",
@@ -127,12 +129,14 @@
     "                pathMovementCost += 1000000000\n",
     "                break\n",
     "            else:\n",
-    "                pathMovementCost += cls.movement_cost([dx * step_size, dy * step_size, abs((objectElevation - lastElevation) * INCHES_TO_MM)], difficulty=objectDifficulty)\n",
+    "                elevationChange = abs((objectElevation - lastElevation) * INCHES_TO_MM)\n",
+    "                pathMovementCost += cls.movement_cost([dx * step_size, dy * step_size, elevationChange], difficulty=objectDifficulty)\n",
     "                lastElevation = objectElevation\n",
     "            if max_cost is not None and pathMovementCost > max_cost:\n",
     "                # print(f\"Exceeded max cost ({max_cost}) with {pathMovementCost}\")\n",
     "                break\n",
     "            movements.append(((x, y), pathMovementCost, lastElevation))\n",
+    "        teleportCost = cls.movement_cost([delta[0], delta[1], abs((lastElevation - elevation) * INCHES_TO_MM)], difficulty=objectDifficulty)\n",
     "        return pathMovementCost, lastElevation, movements\n",
     "        \n",
     "    @classmethod\n",
