Add jumpjet handling

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -473,6 +473,9 @@
     "    def objectSpeed(self, mech_oid: str):\n",
     "        return mc.Movement.MovementSpeed(mech_oid).terminant\n",
     "\n",
+    "    def objectJumpJets(self, mech_oid: str):\n",
+    "        return mc.Movement.JumpJets(mech_oid).terminant\n",
+    "\n",
     "    def factions(self):\n",
     "        return mc.Faction.terminants()\n",
     "\n",
