--- a/harmony/dma/MechaCombat/MovementSystem.ipynb
+++ b/harmony/dma/MechaCombat/MovementSystem.ipynb
@@ -188,10 +188,15 @@
     "        return float(MovementSpeed.get_relationship(entity))\n",
     "    \n",
     "    @classmethod\n",
-    "    def movement_cost(cls, delta: list[float, float, float], difficulty: int = 1) -> float:\n",
+    "    def movement_cost(cls, delta: list[float, float, float], difficulty: int = 1, jump_jets: bool = False) -> float:\n",
     "        \"\"\" Accepts movement delta in millimeters and terrain difficulty; returns movement_cost in inches \"\"\"\n",
-    "        horizontalDistance = sum([d * d for d in delta[:2]]) ** 0.5\n",
-    "        totalCost = (horizontalDistance * difficulty + delta[2] * 2) * MM_TO_INCHES\n",
+    "        if jump_jets:\n",
+    "            totalCost = (sum([d * d for d in delta[:3]]) ** 0.5) * MM_TO_INCHES\n",
+    "            # print(f\"====== Has jumpjets -- simple distance calculation: {totalCost}\")\n",
+    "        else:\n",
+    "            horizontalDistance = sum([d * d for d in delta[:2]]) ** 0.5\n",
+    "            totalCost = (horizontalDistance * difficulty + delta[2] * 2) * MM_TO_INCHES\n",
+    "            # print(f\"====== No jumpjets -- penalized distance calculation: {totalCost}\")\n",
     "        return totalCost\n",
     "\n",
     "    @classmethod\n",
