Relative Elevation Visual Obstructions

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -485,12 +485,31 @@
     "    def object_type(self, oid: str):\n",
     "        return mc.GameObject(oid).terminant\n",
     "\n",
-    "    def line_of_sight(self, actor: HarmonyObject, target: HarmonyObject):\n",
+    "    def line_of_sight(self, actor: HarmonyObject, target: HarmonyObject, step_size: int = 5):\n",
     "        actorPersp = [*mc.XYLocation(actor.oid).terminant, mc.Elevation(actor.oid).terminant]\n",
     "        targetPersp = [*mc.XYLocation(target.oid).terminant, mc.Elevation(target.oid).terminant]\n",
     "\n",
-    "        perspElevation = max(actorPersp[2], targetPersp[2])\n",
-    "        visualObstacles = [m for m in self.memory if mc.Elevation(m.oid).terminant >= perspElevation]\n",
+    "        higherEntity = actorPersp if actorPersp[2] > targetPersp[2] else targetPersp\n",
+    "        higherEntity[2] += 1\n",
+    "        elevationChange = abs(actorPersp[2] - targetPersp[2])\n",
+    "        distanceBetween = sum([(d1 - d0) ** 2 for d0, d1 in zip(actorPersp, targetPersp)]) ** 0.5\n",
+    "        visualObstacles = []\n",
+    "        print(f\"== LOS Between {actor.oid} and {target.oid} ({elevationChange}) [{actorPersp} to {targetPersp}]\")\n",
+    "        for m in self.memory:\n",
+    "            if m == actor or m == target:\n",
+    "                continue\n",
+    "            memXY = mc.XYLocation(m.oid).terminant\n",
+    "            distanceFromHigher = sum([(d1 - d0) ** 2 for d0, d1 in zip(higherEntity[:2], memXY)]) ** 0.5\n",
+    "            if distanceFromHigher > distanceBetween:\n",
+    "                continue\n",
+    "\n",
+    "            losElevationAtDistance = higherEntity[2] - (distanceFromHigher / distanceBetween) * elevationChange\n",
+    "            memElevation = mc.Elevation(m.oid).terminant\n",
+    "            print(f\"=== Evaluating {m.oid} -- LOSElev: {losElevationAtDistance} || memElev: {memElevation}\")\n",
+    "            if memElevation > losElevationAtDistance:\n",
+    "                visualObstacles.append(m)\n",
+    "\n",
+    "        print(f\"== LOS Between {actor.oid} and {target.oid}: {[m.oid for m in visualObstacles]}\")\n",
     "\n",
     "        return self.cc.line_of_sight(actor, target, visualObstacles)\n",
     "\n",
