Units destroyed at 0 structural armor

--- a/harmony/dma/MechaCombat/DamageSystem.ipynb
+++ b/harmony/dma/MechaCombat/DamageSystem.ipynb
@@ -164,7 +164,7 @@
     "    @ArmorStructural.d\n",
     "    def is_destroyed(cls, entity: str,\n",
     "                    armorstructural, armorstructuraldamage):\n",
-    "        return armorstructural < armorstructuraldamage"
+    "        return armorstructural <= armorstructuraldamage"
    ]
   },
   {
