--- a/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
+++ b/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
@@ -103,7 +103,7 @@
     "                break\n",
     "        objectDifficulty = objectDifficulty or 1\n",
     "        \n",
-    "        return elevation, difficulty\n",
+    "        return objectElevation, objectDifficulty\n",
     "    \n",
     "    @classmethod\n",
     "    @Footprint.d\n",
