--- a/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
+++ b/harmony/dma/MechaCombat/MechaCombatSystem.ipynb
@@ -82,35 +82,47 @@
     "\n",
     "    @classmethod\n",
     "    @Footprint.d\n",
-    "    def shifted_location_elevation_difficulty(cls, entity, x, y, footprint) -> [float, float]:  \n",
+    "    def shifted_location_elevation_difficulty(cls, entity, x, y, footprint) -> [float, float, bool]:  \n",
     "        zeros = np.zeros([1200, 1200, 1], dtype=\"uint8\") \n",
     "        shiftedHull = cls.shift_hull_within_bounds([footprint], np.array([x, y], dtype=np.int32), zeros.shape)\n",
-    "        shiftedIm = cv2.drawContours(zeros.copy(), [shiftedHull], -1, 255, -1)     \n",
+    "        im = cv2.drawContours(zeros.copy(), [shiftedHull], -1, 255, -1)     \n",
     "        elevationOverlays = buildElevationOverlays()\n",
     "        difficultyOverlays = buildDifficultyOverlays()\n",
-    "        unitOverlay = Unit.buildOverlay(exclude=[entity])           \n",
+    "        unitOverlay = Unit.buildOverlay(exclude=[entity])   \n",
+    "\n",
+    "        im_pixels = cv2.countNonZero(im)\n",
+    "        \n",
     "        objectElevation = None\n",
     "        for elevation in sorted(elevationOverlays.keys(), reverse=True):\n",
-    "            if cv2.bitwise_and(elevationOverlays[elevation], shiftedIm).any():\n",
+    "            overlap = cv2.bitwise_and(elevationOverlays[elevation], im)\n",
+    "            overlap_pixels = cv2.countNonZero(overlap)\n",
+    "            if overlap_pixels / im_pixels > 0.5:\n",
     "                objectElevation = elevation\n",
     "                break\n",
     "        objectElevation = objectElevation or 0\n",
     "\n",
     "        objectDifficulty = None\n",
     "        for difficulty in sorted(difficultyOverlays.keys(), reverse=True):\n",
-    "            if cv2.bitwise_and(difficultyOverlays[difficulty], shiftedIm).any():\n",
+    "            overlap = cv2.bitwise_and(elevationOverlays[elevation], im)\n",
+    "            overlap_pixels = cv2.countNonZero(overlap)\n",
+    "            if overlap_pixels / im_pixels > 0.5:\n",
     "                objectDifficulty = difficulty\n",
     "                break\n",
-    "        objectDifficulty = objectDifficulty or 1\n",
-    "        \n",
-    "        return objectElevation, objectDifficulty\n",
-    "    \n",
+    "        objectDifficulty = objectDifficulty or 1   \n",
+    "\n",
+    "        unitObstructed = cv2.bitwise_and(unitOverlay, im).any()\n",
+    "\n",
+    "        return objectElevation, objectDifficulty, unitObstructed\n",
+    "\n",
     "    @classmethod\n",
     "    @Footprint.d\n",
     "    @Elevation.d\n",
-    "    def ground_movement_cost(cls, entity, delta, elevation, footprint, max_cost=None):\n",
+    "    def ground_movement_cost(cls, entity, delta, elevation, footprint, max_cost=None, step_size=10):\n",
     "        zeros = np.zeros([1200, 1200, 1], dtype=\"uint8\")\n",
     "        distance = sum([d**2 for d in delta]) ** 0.5\n",
+    "        if distance <= 0:\n",
+    "            return 0, elevation, ((0, 0), 0, elevation)\n",
+    "\n",
     "        dx = delta[0] / distance\n",
     "        dy = delta[1] / distance\n",
     "        steps = int(distance / step_size + 0.5)\n",
@@ -126,26 +138,68 @@
     "        objectDifficulty = 1\n",
     "        for i in range(steps):\n",
     "            x, y = dx * i * step_size, dy * i * step_size\n",
-    "            objectElevation, objectDifficulty = cls.shifted_location_elevation_difficulty(entity=entity, x=x, y=y)\n",
+    "            objectElevation, objectDifficulty, unitObstructed = cls.shifted_location_elevation_difficulty(entity=entity, x=x, y=y)\n",
     "            # print(f\"===== Object Elevation after moving {x}, {y} -- {objectElevation}\")\n",
     "            \n",
-    "            if cv2.bitwise_and(unitOverlay, shiftedIm).any():\n",
+    "            elevationChange = abs((objectElevation - lastElevation) * INCHES_TO_MM)\n",
+    "            if elevationChange > 1:\n",
     "                pathMovementCost += 1000000000\n",
-    "                break\n",
     "            else:\n",
-    "                elevationChange = abs((objectElevation - lastElevation) * INCHES_TO_MM)\n",
-    "                if elevationChange > 1:\n",
-    "                    pathMovementCost += 1000000000\n",
-    "                else:\n",
-    "                    pathMovementCost += cls.movement_cost([dx * step_size, dy * step_size, elevationChange], difficulty=objectDifficulty, jump_jets=jumpjets == 'j')\n",
-    "                # print(f\"==== Path Movement Cost on step {i} -- {pathMovementCost} in -- Delta: {str([dx * step_size, dy * step_size, elevationChange])}\")\n",
-    "                lastElevation = objectElevation\n",
+    "                pathMovementCost += cls.movement_cost([dx * step_size, dy * step_size, elevationChange], difficulty=objectDifficulty, jump_jets=False)\n",
+    "\n",
+    "            if unitObstructed:\n",
+    "                pathMovementCost += 1000000000\n",
+    "\n",
+    "            # print(f\"==== Path Movement Cost on step {i} -- {pathMovementCost} in -- Delta: {str([dx * step_size, dy * step_size, elevationChange])}\")\n",
+    "            lastElevation = objectElevation\n",
+    "\n",
     "            if max_cost is not None and pathMovementCost > max_cost:\n",
     "                # print(f\"Exceeded max cost ({max_cost}) with {pathMovementCost}\")\n",
     "                break\n",
     "            movements.append(((x, y), pathMovementCost, lastElevation))\n",
-    "        teleportCost = cls.movement_cost([delta[0], delta[1], abs((lastElevation - elevation) * INCHES_TO_MM)], difficulty=objectDifficulty, jump_jets=jumpjets == 'j')\n",
-    "        # print(f\"=== Calculated Movement Cost for {delta}: {pathMovementCost} in -- TeleportCost {teleportCost} in -- Horizontal Distance: {distance * MM_TO_INCHES} in\")\n",
+    "        # print(f\"=== Calculated Movement Cost for {delta}: {pathMovementCost} in -- TeleportCost {cls.movement_cost([delta[0], delta[1], abs((lastElevation - elevation) * INCHES_TO_MM)], difficulty=objectDifficulty, jump_jets=True)} in -- Horizontal Distance: {distance * MM_TO_INCHES} in\")\n",
+    "        return pathMovementCost, lastElevation, movements\n",
+    "\n",
+    "    @classmethod\n",
+    "    @Footprint.d\n",
+    "    @Elevation.d\n",
+    "    def jump_movement_cost(cls, entity, delta, elevation, footprint, max_cost=None, step_size=10):\n",
+    "        zeros = np.zeros([1200, 1200, 1], dtype=\"uint8\")\n",
+    "        distance = sum([d**2 for d in delta]) ** 0.5\n",
+    "        if distance <= 0:\n",
+    "            return 0, elevation, ((0, 0), 0, elevation)\n",
+    "\n",
+    "        dx = delta[0] / distance\n",
+    "        dy = delta[1] / distance\n",
+    "        steps = int(distance / step_size + 0.5)\n",
+    "\n",
+    "        # print(f\"=== Moving {entity} by {distance} (v:{delta} || j:{jumpjets}) in {steps} steps of {step_size} mm\")\n",
+    "        elevationOverlays = buildElevationOverlays()\n",
+    "        difficultyOverlays = buildDifficultyOverlays()\n",
+    "        unitOverlay = Unit.buildOverlay(exclude=[entity])\n",
+    "        lastElevation = elevation\n",
+    "        pathMovementCost = 0\n",
+    "        movements = []\n",
+    "        objectElevation = 0\n",
+    "        objectDifficulty = 1\n",
+    "        for i in range(steps):\n",
+    "            x, y = dx * i * step_size, dy * i * step_size\n",
+    "            objectElevation, objectDifficulty, unitObstructed = cls.shifted_location_elevation_difficulty(entity=entity, x=x, y=y)\n",
+    "            # print(f\"===== Object Elevation after moving {x}, {y} -- {objectElevation}\")\n",
+    "            elevationChange = abs((objectElevation - lastElevation) * INCHES_TO_MM)\n",
+    "            pathMovementCost = cls.movement_cost([x, y, elevationChange], difficulty=objectDifficulty, jump_jets=True)\n",
+    "            # print(f\"==== Path Movement Cost on step {i} -- {pathMovementCost} in -- Delta: {str([dx * step_size, dy * step_size, elevationChange])}\")\n",
+    "            lastElevation = objectElevation\n",
+    "            \n",
+    "            if max_cost is not None and pathMovementCost > max_cost:\n",
+    "                # print(f\"Exceeded max cost ({max_cost}) with {pathMovementCost}\")\n",
+    "                break\n",
+    "\n",
+    "            if unitObstructed:\n",
+    "                pathMovementCost += 1000000000\n",
+    "                \n",
+    "            movements.append(((x, y), pathMovementCost, lastElevation))\n",
+    "        # print(f\"=== Calculated Movement Cost for {delta}: {pathMovementCost} in -- TeleportCost {cls.movement_cost([delta[0], delta[1], abs((lastElevation - elevation) * INCHES_TO_MM)], difficulty=objectDifficulty, jump_jets=True)} in -- Horizontal Distance: {distance * MM_TO_INCHES} in\")\n",
     "        return pathMovementCost, lastElevation, movements\n",
     "\n",
     "    @classmethod\n",
@@ -155,9 +209,7 @@
     "        distance = sum([d**2 for d in delta]) ** 0.5\n",
     "        # print(f\"=== Moving {entity} by {distance} (v:{delta} || j:{jumpjets})\")\n",
     "        if jumpjets:\n",
-    "            elevation, _ = cls.shifted_location_elevation_difficulty(entity=entity, x=delta[0], y=delta[1])\n",
-    "            totalCost = cls.movement_cost([*delta, elevation], difficulty=0, jump_jets=True)\n",
-    "            movements = [((delta[0], delta[1]), totalCost, elevation)]\n",
+    "            totalCost, elevation, movements = cls.jump_movement_cost(entity=entity, delta=delta, max_cost=max_cost)\n",
     "        else:\n",
     "            totalCost, elevation, movements = cls.ground_movement_cost(entity=entity, delta=delta, max_cost=max_cost)\n",
     "        return totalCost, elevation, movements\n",
