Fix movement request drawing

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -679,6 +679,7 @@
     "            miniMap = cv2.line(\n",
     "                miniMap,\n",
     "                np.array([d - dd for d, dd in zip(self.cc.rsc.changeSetToRealCenter(self.expectedChange), [x, y])], dtype=np.int32),\n",
+    "                np.array([d - dd for d, dd in zip(self.cc.rsc.changeSetToRealCenter(self.expectedChange.lastChange), [x, y])], dtype=np.int32),\n",
     "                (125, 255, 0), 5)\n",
     "        return miniMap        \n",
     "    \n",
