Revert to passive after committedChange

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -346,6 +346,9 @@
     "\n",
     "            print(f\"!!! Memorizing: {objDef.oid}\")\n",
     "            mc.qs.graph.memorize(objDef)\n",
+    "\n",
+    "        self.mode = \"passive\"\n",
+    "        \n",
     "        return objDef\n",
     "\n",
     "    def takeAction(self, actor, target, result=None):\n",
