Add launch script; Hide changes in passive mode

--- a/harmony/observer/Observer.ipynb
+++ b/harmony/observer/Observer.ipynb
@@ -725,7 +725,11 @@
     "        self.cc.setReference()\n",
     "        \n",
     "    def referenceFrameDeltas(self):\n",
-    "        return ChangeSet({camName: cam.referenceFrameDelta() for camName, cam in cameras.items()})\n",
+    "        return ChangeSet({\n",
+    "            camName: cam.referenceFrameDelta() \n",
+    "                if self.mode != \"passive\" else\n",
+    "                CameraChange(camName, None, None, None, changeType=None)\n",
+    "            for camName, cam in cameras.items()})\n",
     "    \n",
     "    def memoriesInChangeOrder(self):\n",
     "        changeOrderMemories = []\n",
